--- a/index.html
+++ b/index.html
@@ -69,14 +69,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
-    <h4><b>Why Romania?</b></h4>
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>Authentic, Natural and Cultural </h4>
             <p> are the words that best capture the essence of Romania,</p>
             <p>a dynamic country rich in history, arts and scenic beauty.</p>
           <h4>  Nature & Wildlife</h4>
-<p>The Carpathian Mountains draw a wide arc through the centre of the country, leaving a swath of exposed rocky peaks surrounded by groves of pine and deciduous trees, and stretches of bright green meadow below. The harsh geography has limited human habitation, and the woods are filled with deer, elk and bear. Europe's second-longest river, the Danube, marks Romania's southern border with Bulgaria before turning suddenly northward and emptying into the Black Sea. The delta provides sanctuary for 300 species of bird and 160 species of fish. The sprawling marshes account for the largest expanse of reed beds in the world.</p>
-
+            <p>The Carpathian Mountains draw a wide arc through the centre of the country, leaving a swath of exposed rocky peaks surrounded by groves of pine and deciduous trees, and stretches of bright green meadow below. The harsh geography has limited human habitation, and the woods are filled with deer, elk and bear. Europe's second-longest river, the Danube, marks Romania's southern border with Bulgaria before turning suddenly northward and emptying into the Black Sea. The delta provides sanctuary for 300 species of bird and 160 species of fish. The sprawling marshes account for the largest expanse of reed beds in the world.</p>
 <h4>Castles & Medieval Towns</h4>
 <p>Transylvania, the land that gave us Dracula, has no shortage of jaw-dropping castles pitched precariously on rocky hilltops. There's spooky Bran Castle, of course, with its spurious connection to Bram Stoker’s fictional count, but don’t overlook beauties such as Hunedoara’s 14th-century Corvin Castle or King Carol I’s sumptuous 19th-century pile, Peleş Castle. In medieval towns like Braşov, Sighişoara and Sibiu, cobbled walkways support chic streetside cafes, while a cacophony of sounds emanating from student bars and clubs echo off the Gothic and baroque facades in lively Cluj-Napoca. Transylvania’s Saxon villages boast fortified churches that date back half a millennium.</p>
 
@@ -86,6 +84,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <h4>Outdoor Activities</h4>
 <p>The rocky peaks of Transylvania and Moldavia, snow-capped from mid-October in some years, call out for conquering, and well-marked trails lead to summits from all directions. There are less adventurous but no less rewarding walks through woods, meadows and villages in other parts of the country. The Danube Delta is a vast and unique protected wetland and makes a perfect backdrop for fishing, boating and, especially, birdwatching in spring. In summer, from mid-June to early September, the action moves to the Black Sea coast. Beach resorts fill up with swimmers, divers, sunbathers and partiers, who come for the all-night, open-air clubbing marathons.</p>
   </div>
+</div>
 
   <!-- Contact section -->
   <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
@@ -115,23 +114,46 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <footer class="w3-container w3-padding-32 w3-grey">
     <div class="w3-row-padding">
       <div class="w3-third">
-        <h3>INFO</h3>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <h3>Info</h3>
+        <ul class="w3-ul">
+          <li class="w3-padding-16 w3-hover-black">
+            <p> <a href="https://www.romaniaexperience.com/these-are-the-international-airports-in-romania-with-map/">
+              <img src="plane.jpg" class="w3-left w3-margin-right" style="width:50px"> </p>
+            <span class="w3-large">International Airports in Romania</span><br>
+            <span>Hopefully this map of the Romanian airports will make it easier for those looking to visit the country to get as close to the city they want to see.</span>
+          </li>
+        </ul>
       </div>
 
       <div class="w3-third">
-        <h3>BLOG POSTS</h3>
+        <h3>You might also like</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Lorem</span><br>
-            <span>Sed mattis nunc</span>
+            <p><a href="http://www.touropia.com/best-places-to-stay-in-bucharest/">
+              <img src="buc.jpg" class="w3-left w3-margin-right" style="width:50px"> </p>
+            <span class="w3-large">8 Best Places to Stay in Bucharest</span><br>
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Ipsum</span><br>
-            <span>Praes tinci sed</span>
+            <img src="why.jpg" class="w3-left w3-margin-right" style="width:50px">
+            <span class="w3-large">15 Top Tourist Attractions in Romania</span><br>
           </li>
+        </ul>
+      </div>
+
+      <div class="w3-third">
+        <h3>When to visit</h3>
+        <ul class="w3-ul">
+          <li class="w3-padding-16 w3-hover-black">
+            <p> <a href="https://untold.com/en">
+              <img src="untold.jpg" class="w3-left w3-margin-right" style="width:50px"> </p>
+            <span class="w3-large">Untold Festival</span><br>
+            <span>2-5 AUGUST 2018: Cluj-Napoca, Transylvania, Romania </span>
+          </li>
+          <li class="w3-padding-16 w3-hover-black">
+          <p> <a href="https://www.romania-insider.com/what-do-romanians-celebrate-on-their-december-1st-national-day/"></p>
+            <img src="dec.jpg" class="w3-left w3-margin-right" style="width:50px">
+            <span class="w3-large">Romanian's National Day</span><br>
+            <span>How do Romanians celebrate on the 1st of December?</span>
         </ul>
       </div>
 
