--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
         <li class="padding-16 hover-black">
           <p><a href="https://www.romania-insider.com/what-do-romanians-celebrate-on-their-december-1st-national-day/">
           <img src="dec.jpg" class="left margin-right" style="width:50px"> </p>
-          <span class="large">Romanian's National Day</span><br>
+          <span class="large">Romania's National Day</span><br>
         </li>
       </ul>
     </div>
