--- a/gallery.html
+++ b/gallery.html
@@ -139,7 +139,7 @@
             <p> <img src="dec.jpg" class="left margin-right" style="width:50px">
               <a href="https://www.romania-insider.com/what-do-romanians-celebrate-on-their-december-1st-national-day/">
              </p>
-            <span class="large">Romanian's National Day</span><br>
+            <span class="large">Romania's National Day</span><br>
           </li>
         </ul>
       </div>
